--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/masatonakatsuji2021/hachiware_routing/issues"
   },
-  "homepage": "https://github.com/masatonakatsuji2021/hachiware_routing#readme"
+  "homepage": "https://hachiware-js.com/"
 }
